# doxstrux

./: .gitignore  .phase-0.complete.json  .phase-2.complete.json  .phase-3.complete.json  .phase-5.complete.json  AI_ASSISTANT_USER_MANUAL.md  AI_TASK_LIST_TEMPLATE_GENERAL_ONLY_v1.md  AI_TASK_LIST_TEMPLATE_GUIDE_GENERAL_ONLY_v1.md  AI_TASK_LIST_TEMPLATE_GUIDE_v2_1_gpt.md  AI_TASK_LIST_TEMPLATE_GUIDE_v2_2_gpt.md  AI_TASK_LIST_TEMPLATE_ITERATION.md  AI_TASK_LIST_TEMPLATE_v2_1_gpt.md  AI_TASK_LIST_TEMPLATE_v2_2_gpt.md  ARCHITECTURE_DECISION.md  BUGS_AND_DRIFTS.md  CHAIN_OF_THOUGHT_GOLDEN_ALL_IN_ONE.json  CHANGELOG.md  CHUNKER_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DEAD_CODE_REPORT.md  DOXSTRUX_AI_TASK_LIST.md  DOXSTRUX_PHASE8_SMALL_IMPROVEMENTS.md  DOXSTRUX_REFACTOR.md  DOXSTRUX_REFACTOR_TIMELINE_CORE.md  DOXSTRUX_REFACTOR_UPDATED.md  Extracted_regex_patterns__preview__truncated_.csv  FIXES_MERGED_SUMMARY.md  FIX_ISSUES.md  Feedback_1.md  NEXT_STEPS_FORMAT.md  NO_SILENTS_proposal.md  PHASE_0_COMPLETE.md  PYDANTIC_SCHEMA (another copy).md  PYDANTIC_SCHEMA (copy).md  PYDANTIC_SCHEMA_AI_TASK_LIST_V2.md  PYDANTIC_SCHEMA_proposal.md  PYPI_RELEASE.md  RAG_SUITABILITY.md  README.md  (+27 more)
regex_refactor_docs/performance/task-list-main (15)/task-list-main/: .pre-commit-config.yaml  100_PERCENT_COVERAGE_COMPLETION.md  DETAILED_TASK_LIST_template.md  DETAILED_TASK_LIST_template.yaml  MANIFEST.in  README.md  USER_MANUAL.md  pyproject.toml  quickpush.sh  requirements.txt  tasklist_build_backend.py
regex_refactor_docs/performance/task-list-main (15)/task-list-main/evidence/: issues.md
(+3248 files in other folders)
